<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewMoreInfoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/more_info_title_investiment"
        android:textColor="@color/textColorGray2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFundTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="right"
        android:text="@string/more_info_fund_title_investiment"
        android:textColor="@color/textColorGray2"
        app:layout_constraintEnd_toStartOf="@+id/textViewCDITitle"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMoreInfoTitle" />

    <TextView
        android:id="@+id/textViewCDITitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="right"
        android:text="@string/more_info_cdi_title_investiment"
        android:textColor="@color/textColorGray2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMoreInfoTitle" />

    <TextView
        android:id="@+id/textViewOnMonth"
        style="@style/TextViewMoreInfoLabels"
        android:text="@string/more_info_on_month_investiment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFundTitle" />

    <TextView
        android:id="@+id/textViewOnYear"
        style="@style/TextViewMoreInfoLabels"
        android:text="@string/more_info_on_year_investiment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOnMonth" />

    <TextView
        android:id="@+id/textViewOnTwelveMonths"
        style="@style/TextViewMoreInfoLabels"
        android:text="@string/more_info_on_twelve_months_investiment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOnYear" />

    <TextView
        android:id="@+id/textViewOnMonthFund"
        style="@style/TextViewMoreInfoValues"
        android:text="0.1%"
        app:layout_constraintEnd_toStartOf="@+id/textViewOnMonthCDI"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toEndOf="@+id/textViewOnMonth"
        app:layout_constraintTop_toBottomOf="@+id/textViewFundTitle" />

    <TextView
        android:id="@+id/textViewOnYearFund"
        style="@style/TextViewMoreInfoValues"
        android:text="13.00%"
        app:layout_constraintEnd_toStartOf="@+id/textViewOnYearCDI"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toEndOf="@+id/textViewOnYear"
        app:layout_constraintTop_toBottomOf="@+id/textViewOnMonthFund" />

    <TextView
        android:id="@+id/textViewOnTwelveMonthsFund"
        style="@style/TextViewMoreInfoValues"
        android:text="10.9%"
        app:layout_constraintEnd_toStartOf="@+id/textViewOnTwelveMonthsCDI"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toEndOf="@+id/textViewOnTwelveMonths"
        app:layout_constraintTop_toBottomOf="@+id/textViewOnYearFund" />

    <TextView
        android:id="@+id/textViewOnMonthCDI"
        style="@style/TextViewMoreInfoValues"
        android:text="0.1%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCDITitle" />

    <TextView
        android:id="@+id/textViewOnYearCDI"
        style="@style/TextViewMoreInfoValues"
        android:text="10.9%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOnMonthCDI" />

    <TextView
        android:id="@+id/textViewOnTwelveMonthsCDI"
        style="@style/TextViewMoreInfoValues"
        android:text="12.6%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOnYearCDI" />

    <View
        android:id="@+id/line_saparator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/textColorGray1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOnTwelveMonthsFund" />

</android.support.constraint.ConstraintLayout>